Added testtexts to regression test against golden img

--- a/js-mocha/package.json
+++ b/js-mocha/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Gilded Rose kata in Javascript with Mocha",
   "scripts": {
-    "test": "mocha './test/**/*.spec.js'"
+    "test": "mocha './test/**/*.spec.js'",
+    "tt": "node ./test/gilded_rose.texttest.js 30"
   },
   "repository": {
     "type": "git",
